<?xml version="1.0"?>

<package format="3">
  <name>freespace_planner</name>

  <version>0.2.0</version>
  <description>Hybrid A* algorithm to navigate in free-space</description>
  <maintainer email="oliver.schumann@uni-ulm.de">Oliver Schumann</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>aduulm_make_tools</depend>

  <!--  Library-->
  <depend>freespace_planner_lib</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
